--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-/* styles.css */
-
 body {
   font-family: Arial, sans-serif;
   margin: 0;
@@ -8,12 +6,8 @@ body {
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  height: 100%;
-}
-
-h1 {
-  text-align: center;
-  margin-top: 20px;
+  font-size: 24px;
+  font-weight: bold;
 }
 
 .weather-container {
@@ -21,21 +15,27 @@ h1 {
   display: block;
   background-color: rgb(128, 128, 128, 0.8);
   text-align: center;
-  padding-bottom: 10%;
-  padding-bottom: auto;
+  padding-bottom: 80%;
 }
 
-#temp {
-  font-weight: bold;
-  margin-bottom: 10px;
-  opacity: calc(100%);
-}
 
+#temp,
 #conditions,
 #description {
-  font-weight: bold;
+  
   margin-bottom: 10px;
   opacity: calc(100%);
+}
+
+header {
+  background-color: #333;
+  padding: 20px;
+  color: #fff;
+}
+
+h1 {
+  margin: 0;
+  font-size: 24px;
 }
 
 nav {
@@ -48,10 +48,10 @@ nav ul {
   padding: 0;
   margin: 0;
   display: flex;
-  justify-content: flex-end;
+  justify-content: center;
 }
 
-nav a {
+nav a{
   display: block;
   color: #fff;
   text-decoration: none;
@@ -60,4 +60,9 @@ nav a {
 
 nav a:hover {
   background-color: #555;
+  cursor: pointer;
+}
+
+nav li:not(:last-child) {
+  border-right: 1px solid #fff;
 }
